# MessageQueueTest

./: .gitignore  CMakeLists.txt  README.md
include/: baseenvelope.h  program.h
include/activemqclient/: activemqclient.h  envelope.h  receivingqueue.h  sendingqueue.h  topic.h
include/kafkaclient/: envelope.h  kafkaclient.h  receivingqueueworker.h  topic.h  topicworker.h
include/rabbitmqclient/: envelope.h  rabbitmqclient.h  receivingqueue.h  receivingqueueworker.h  sendingqueue.h  topic.h
src/: main.cpp  program.cpp
src/activemqclient/: activemqclient.cpp  receivingqueue.cpp  sendingqueue.cpp  topic.cpp
src/kafkaclient/: kafkaclient.cpp  receivingqueueworker.cpp  topic.cpp  topicworker.cpp
src/rabbitmqclient/: rabbitmqclient.cpp  receivingqueue.cpp  receivingqueueworker.cpp  sendingqueue.cpp  topic.cpp
